              simultaneously.
            - Functions inverse() and power() now return by value, not pointer.
            - Functions addTermsFirst() and addTermsLast() now take the
              GroupExpression argument by value, not by const reference.
            - Added member and global swap() functions.
            - Renamed toTeX() to tex().  The old name is kept but deprecated.
        Class GroupPresentation:
            - New routines enumerateCovers(), incidence() and gap().
            - Added move constructors and move assignment operators.
            - New constructor to create free groups.
            - The vector-of-strings constructor now throws an exception
              on error, instead of silently removing the invalid relation.
            - Functions abelianisation() and markedAbelianisation() now
              return groups by value (which can then be moved from).
            - New routine abelianRank().
            - New routine relations().
            - Function addRelation() now takes its argument by value.
            - Added member and global swap() functions.
            - Functions intelligentSimplify(), smallCancellation(),
              intelligentNielsen(), homologicalAlignment() and prettyRewriting()
              now return a std::optional<HomGroupPresentation>, not a bool
              (but this can be cast to a bool to give the previous behaviour).
              The corresponding ...Detail() functions are now deprecated
              aliases, and return this same std::optional<HomGroupPresentation>
              instead of a std::unique_ptr<HomGroupPresentation>.  The C++
              syntax should be largely unaffected, and the Python behaviour
              (returns None if there is no homomorphism) should remain the same.
            - Renamed toTeX() to tex().  The old name is kept but deprecated.
            - Other major cleanup and reorganisation under the hood.
        Class Handlebody: