@@ -45,11 +45,9 @@ void addSignature(pybind11::module_& m) {
         .def("order", &Signature::order)
         .def_static("parse", &Signature::parse)
         .def("triangulate", &Signature::triangulate)
-        .def("writeCycles", [](const Signature& sig,
-                const std::string& cycleOpen, const std::string& cycleClose,
-                const std::string& cycleJoin) {
-            sig.writeCycles(std::cout, cycleOpen, cycleClose, cycleJoin);
-        })
+        .def("str", pybind11::overload_cast<
+            const std::string&, const std::string&, const std::string&>(
+            &Signature::str, pybind11::const_))
     ;
     regina::python::add_output(c);
     regina::python::add_eq_operators(c);
